// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`settings page DOM renders the general category byte-stably 1`] = `
"<main aria-labelledby="settings-page-title" class="settings-window">
  <div class="settings-drag-region">
    <div class="settings-toolbar">
      <div class="settings-history-nav">
        <button type="button" title="Back" class="icon-button icon-button-chrome rail-toggle" aria-label="Back" disabled>
          <svg data-icon="ChevronLeft" class="app-icon" focusable="false" aria-hidden="true" color="currentColor" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" height="var(--icon-size-md)" width="var(--icon-size-md)">
            <path stroke-linejoin="round" stroke-linecap="round" stroke="currentColor" d="M15 6L9 12L15 18" />
          </svg>
        </button>
        <span aria-hidden="true" class="settings-history-divider">
        </span>
        <button type="button" title="Forward" class="icon-button icon-button-chrome rail-toggle" aria-label="Forward" disabled>
          <svg data-icon="ChevronRight" class="app-icon" focusable="false" aria-hidden="true" color="currentColor" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" height="var(--icon-size-md)" width="var(--icon-size-md)">
            <path stroke-linejoin="round" stroke-linecap="round" stroke="currentColor" d="M9 6L15 12L9 18" />
          </svg>
        </button>
      </div>
      <h1 id="settings-page-title" class="settings-toolbar-title">General</h1>
    </div>
  </div>
  <div class="settings-layout">
    <aside class="settings-rail">
      <h2 class="settings-rail-title">Settings</h2>
      <nav aria-label="Settings categories" class="settings-nav">
        <button type="button" class="settings-nav-item is-active" aria-current="page">
          <span aria-hidden="true" class="settings-nav-icon">
            <svg data-icon="Settings" class="app-icon" focusable="false" aria-hidden="true" color="currentColor" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" height="var(--icon-size-sm)" width="var(--icon-size-sm)">
              <path stroke-linejoin="round" stroke-linecap="round" stroke="currentColor" d="M12 15C13.6569 15 15 13.6569 15 12C15 10.3431 13.6569 9 12 9C10.3431 9 9 10.3431 9 12C9 13.6569 10.3431 15 12 15Z" />
              <path stroke-linejoin="round" stroke-linecap="round" stroke="currentColor" d="M19.6224 10.3954L18.5247 7.7448L20 6L18 4L16.2647 5.48295L13.5578 4.36974L12.9353 2H10.981L10.3491 4.40113L7.70441 5.51596L6 4L4 6L5.45337 7.78885L4.3725 10.4463L2 11V13L4.40111 13.6555L5.51575 16.2997L4 18L6 20L7.79116 18.5403L10.397 19.6123L11 22H13L13.6045 19.6132L16.2551 18.5155C16.6969 18.8313 18 20 18 20L20 18L18.5159 16.2494L19.6139 13.598L21.9999 12.9772L22 11L19.6224 10.3954Z" />
            </svg>
          </span>
          <span class="settings-nav-copy">
            <span class="settings-nav-label">General</span>
          </span>
          <span class="settings-status-dot is-hidden" aria-hidden="true">
          </span>
        </button>
        <button type="button" class="settings-nav-item">
          <span aria-hidden="true" class="settings-nav-icon">
            <svg data-icon="Skill" class="app-icon" focusable="false" aria-hidden="true" color="currentColor" xmlns="http://www.w3.org/2000/svg" fill="none" stroke-width="1.5" viewBox="0 0 24 24" height="var(--icon-size-sm)" width="var(--icon-size-sm)">
              <path stroke-linejoin="round" stroke-linecap="round" stroke="currentColor" d="M2.57331 8.46334L11.2317 4.13416C11.4006 4.04971 11.5994 4.04971 11.7683 4.13416L20.4267 8.46334C20.8689 8.68446 20.8689 9.31554 20.4267 9.53666L11.7683 13.8658C11.5994 13.9503 11.4006 13.9503 11.2317 13.8658L2.57331 9.53666C2.13108 9.31554 2.13108 8.68446 2.57331 8.46334Z" />
              <path stroke-linejoin="round" stroke-linecap="round" stroke="currentColor" d="M22.5 13L22.5 9.5L20.5 8.5" />
              <path stroke-linejoin="round" stroke-linecap="round" stroke="currentColor" d="M4.5 10.5V15.9121C4.5 16.6843 4.94459 17.3876 5.6422 17.7188L10.6422 20.0928C11.185 20.3505 11.815 20.3505 12.3578 20.0928L17.3578 17.7188C18.0554 17.3876 18.5 16.6843 18.5 15.9121V10.5" />
            </svg>
          </span>
          <span class="settings-nav-copy">
            <span class="settings-nav-label">Agent</span>
          </span>
        </button>
        <button type="button" class="settings-nav-item">
          <span aria-hidden="true" class="settings-nav-icon">
            <svg data-icon="Database" class="app-icon" focusable="false" aria-hidden="true" color="currentColor" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" height="var(--icon-size-sm)" width="var(--icon-size-sm)">
              <path stroke="currentColor" d="M5 12V18C5 18 5 21 12 21C19 21 19 18 19 18V12" />
              <path stroke="currentColor" d="M5 6V12C5 12 5 15 12 15C19 15 19 12 19 12V6" />
              <path stroke="currentColor" d="M12 3C19 3 19 6 19 6C19 6 19 9 12 9C5 9 5 6 5 6C5 6 5 3 12 3Z" />
            </svg>
          </span>
          <span class="settings-nav-copy">
            <span class="settings-nav-label">Preview</span>
          </span>
        </button>
      </nav>
    </aside>
    <div class="settings-content">
      <section aria-label="General" class="agent-settings-section settings-general-section">
        <div class="inset-group">
          <div class="inset-group-header">Appearance</div>
          <div role="list" class="inset-card" aria-label="Appearance">
            <div role="listitem" class="inset-row">
              <div class="inset-row-main is-static">
                <span class="inset-row-text is-wrap">
                  <span class="inset-row-label">Theme</span>
                  <span class="inset-row-sublabel">Match the system appearance, or always use light or dark.</span>
                </span>
              </div>
              <div class="inset-row-trailing">
                <div role="radiogroup" class="segmented-control" aria-label="Theme">
                  <button type="button" tabindex="0" role="radio" class="segmented-control-option is-selected" aria-checked="true">System</button>
                  <button type="button" tabindex="-1" role="radio" class="segmented-control-option" aria-checked="false">Light</button>
                  <button type="button" tabindex="-1" role="radio" class="segmented-control-option" aria-checked="false">Dark</button>
                </div>
              </div>
            </div>
            <div role="listitem" class="inset-row">
              <div class="inset-row-main is-static">
                <span class="inset-row-text is-wrap">
                  <span class="inset-row-label">Language</span>
                  <span class="inset-row-sublabel">Choose the display language for menus and the interface.</span>
                </span>
              </div>
              <div class="inset-row-trailing">
                <span class="select-popup">
                  <select class="select-popup-input" aria-label="Language">
                    <option selected value="en">English</option>
                    <option value="zh-Hans">简体中文</option>
                  </select>
                  <svg data-icon="ChevronDown" class="app-icon select-popup-chevron" focusable="false" aria-hidden="true" color="currentColor" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" height="var(--icon-size-xs)" width="var(--icon-size-xs)">
                    <path stroke-linejoin="round" stroke-linecap="round" stroke="currentColor" d="M6 9L12 15L18 9" />
                  </svg>
                </span>
              </div>
            </div>
          </div>
        </div>
        <div class="inset-group">
          <div class="inset-group-header">Shortcuts</div>
          <div role="list" class="inset-card" aria-label="Shortcuts">
            <div role="listitem" class="inset-row">
              <div class="inset-row-main is-static">
                <span class="inset-row-text is-wrap">
                  <span class="inset-row-label">Global launcher</span>
                  <span class="inset-row-sublabel">Not available — the candidate shortcuts are in use by other apps. Quit the conflicting app and relaunch Tenon.</span>
                </span>
              </div>
            </div>
          </div>
        </div>
        <div class="inset-group">
          <div class="inset-group-header">Diagnostics</div>
          <div role="list" class="inset-card" aria-label="Diagnostics">
            <div role="listitem" class="inset-row">
              <div class="inset-row-main is-static">
                <span class="inset-row-text is-wrap">
                  <span class="inset-row-label">Diagnostics log</span>
                  <span class="inset-row-sublabel">Reveal the local structured error log in Finder.</span>
                </span>
              </div>
              <div class="inset-row-trailing">
                <button type="button" class="button button-secondary button-md">Reveal</button>
              </div>
            </div>
            <div role="listitem" class="inset-row">
              <div class="inset-row-main is-static">
                <span class="inset-row-text is-wrap">
                  <span class="inset-row-label">Diagnostics export</span>
                  <span class="inset-row-sublabel">Save recent diagnostics and minimal environment details as JSON.</span>
                </span>
              </div>
              <div class="inset-row-trailing">
                <button type="button" class="button button-secondary button-md">Export…</button>
              </div>
            </div>
          </div>
        </div>
        <div data-settings-anchor="about" class="inset-group">
          <div role="list" class="inset-card" aria-label="About">
            <div role="listitem" class="inset-row">
              <button type="button" class="inset-row-main">
                <span class="inset-row-text">
                  <span class="inset-row-label">About Tenon</span>
                </span>
                <span class="settings-status-dot is-hidden" aria-hidden="true">
                </span>
                <span aria-hidden="true" class="settings-drilldown-chevron">
                  <svg data-icon="ChevronRight" class="app-icon" focusable="false" aria-hidden="true" color="currentColor" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" height="var(--icon-size-sm)" width="var(--icon-size-sm)">
                    <path stroke-linejoin="round" stroke-linecap="round" stroke="currentColor" d="M9 6L15 12L9 18" />
                  </svg>
                </span>
              </button>
            </div>
          </div>
        </div>
      </section>
    </div>
  </div>
</main>"
`;

exports[`settings page DOM renders the agent category byte-stably 1`] = `
"<main aria-labelledby="settings-page-title" class="settings-window">
  <div class="settings-drag-region">
    <div class="settings-toolbar">
      <div class="settings-history-nav">
        <button type="button" title="Back" class="icon-button icon-button-chrome rail-toggle" aria-label="Back" disabled>
          <svg data-icon="ChevronLeft" class="app-icon" focusable="false" aria-hidden="true" color="currentColor" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" height="var(--icon-size-md)" width="var(--icon-size-md)">
            <path stroke-linejoin="round" stroke-linecap="round" stroke="currentColor" d="M15 6L9 12L15 18" />
          </svg>
        </button>
        <span aria-hidden="true" class="settings-history-divider">
        </span>
        <button type="button" title="Forward" class="icon-button icon-button-chrome rail-toggle" aria-label="Forward" disabled>
          <svg data-icon="ChevronRight" class="app-icon" focusable="false" aria-hidden="true" color="currentColor" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" height="var(--icon-size-md)" width="var(--icon-size-md)">
            <path stroke-linejoin="round" stroke-linecap="round" stroke="currentColor" d="M9 6L15 12L9 18" />
          </svg>
        </button>
      </div>
      <h1 id="settings-page-title" class="settings-toolbar-title">Agent</h1>
    </div>
  </div>
  <div class="settings-layout">
    <aside class="settings-rail">
      <h2 class="settings-rail-title">Settings</h2>
      <nav aria-label="Settings categories" class="settings-nav">
        <button type="button" class="settings-nav-item">
          <span aria-hidden="true" class="settings-nav-icon">
            <svg data-icon="Settings" class="app-icon" focusable="false" aria-hidden="true" color="currentColor" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" height="var(--icon-size-sm)" width="var(--icon-size-sm)">
              <path stroke-linejoin="round" stroke-linecap="round" stroke="currentColor" d="M12 15C13.6569 15 15 13.6569 15 12C15 10.3431 13.6569 9 12 9C10.3431 9 9 10.3431 9 12C9 13.6569 10.3431 15 12 15Z" />
              <path stroke-linejoin="round" stroke-linecap="round" stroke="currentColor" d="M19.6224 10.3954L18.5247 7.7448L20 6L18 4L16.2647 5.48295L13.5578 4.36974L12.9353 2H10.981L10.3491 4.40113L7.70441 5.51596L6 4L4 6L5.45337 7.78885L4.3725 10.4463L2 11V13L4.40111 13.6555L5.51575 16.2997L4 18L6 20L7.79116 18.5403L10.397 19.6123L11 22H13L13.6045 19.6132L16.2551 18.5155C16.6969 18.8313 18 20 18 20L20 18L18.5159 16.2494L19.6139 13.598L21.9999 12.9772L22 11L19.6224 10.3954Z" />
            </svg>
          </span>
          <span class="settings-nav-copy">
            <span class="settings-nav-label">General</span>
          </span>
          <span class="settings-status-dot is-hidden" aria-hidden="true">
          </span>
        </button>
        <button type="button" class="settings-nav-item is-active" aria-current="page">
          <span aria-hidden="true" class="settings-nav-icon">
            <svg data-icon="Skill" class="app-icon" focusable="false" aria-hidden="true" color="currentColor" xmlns="http://www.w3.org/2000/svg" fill="none" stroke-width="1.5" viewBox="0 0 24 24" height="var(--icon-size-sm)" width="var(--icon-size-sm)">
              <path stroke-linejoin="round" stroke-linecap="round" stroke="currentColor" d="M2.57331 8.46334L11.2317 4.13416C11.4006 4.04971 11.5994 4.04971 11.7683 4.13416L20.4267 8.46334C20.8689 8.68446 20.8689 9.31554 20.4267 9.53666L11.7683 13.8658C11.5994 13.9503 11.4006 13.9503 11.2317 13.8658L2.57331 9.53666C2.13108 9.31554 2.13108 8.68446 2.57331 8.46334Z" />
              <path stroke-linejoin="round" stroke-linecap="round" stroke="currentColor" d="M22.5 13L22.5 9.5L20.5 8.5" />
              <path stroke-linejoin="round" stroke-linecap="round" stroke="currentColor" d="M4.5 10.5V15.9121C4.5 16.6843 4.94459 17.3876 5.6422 17.7188L10.6422 20.0928C11.185 20.3505 11.815 20.3505 12.3578 20.0928L17.3578 17.7188C18.0554 17.3876 18.5 16.6843 18.5 15.9121V10.5" />
            </svg>
          </span>
          <span class="settings-nav-copy">
            <span class="settings-nav-label">Agent</span>
          </span>
        </button>
        <button type="button" class="settings-nav-item">
          <span aria-hidden="true" class="settings-nav-icon">
            <svg data-icon="Database" class="app-icon" focusable="false" aria-hidden="true" color="currentColor" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" height="var(--icon-size-sm)" width="var(--icon-size-sm)">
              <path stroke="currentColor" d="M5 12V18C5 18 5 21 12 21C19 21 19 18 19 18V12" />
              <path stroke="currentColor" d="M5 6V12C5 12 5 15 12 15C19 15 19 12 19 12V6" />
              <path stroke="currentColor" d="M12 3C19 3 19 6 19 6C19 6 19 9 12 9C5 9 5 6 5 6C5 6 5 3 12 3Z" />
            </svg>
          </span>
          <span class="settings-nav-copy">
            <span class="settings-nav-label">Preview</span>
          </span>
        </button>
      </nav>
    </aside>
    <div class="settings-content">
      <section aria-label="Agent" class="agent-settings-section">
        <div data-settings-anchor="capabilities" class="inset-group">
          <div role="list" class="inset-card" aria-label="Agent capabilities">
            <div role="listitem" class="inset-row">
              <button type="button" class="inset-row-main">
                <span class="inset-row-text">
                  <span class="inset-row-label">Model services</span>
                  <span class="inset-row-sublabel">No model service connected</span>
                </span>
                <span aria-hidden="true" class="settings-drilldown-chevron">
                  <svg data-icon="ChevronRight" class="app-icon" focusable="false" aria-hidden="true" color="currentColor" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" height="var(--icon-size-sm)" width="var(--icon-size-sm)">
                    <path stroke-linejoin="round" stroke-linecap="round" stroke="currentColor" d="M9 6L15 12L9 18" />
                  </svg>
                </span>
              </button>
            </div>
            <div role="listitem" class="inset-row">
              <button type="button" class="inset-row-main">
                <span class="inset-row-text">
                  <span class="inset-row-label">Agents</span>
                  <span class="inset-row-sublabel">1 agent</span>
                </span>
                <span aria-hidden="true" class="settings-drilldown-chevron">
                  <svg data-icon="ChevronRight" class="app-icon" focusable="false" aria-hidden="true" color="currentColor" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" height="var(--icon-size-sm)" width="var(--icon-size-sm)">
                    <path stroke-linejoin="round" stroke-linecap="round" stroke="currentColor" d="M9 6L15 12L9 18" />
                  </svg>
                </span>
              </button>
            </div>
            <div role="listitem" class="inset-row">
              <button type="button" class="inset-row-main">
                <span class="inset-row-text">
                  <span class="inset-row-label">Skills</span>
                  <span class="inset-row-sublabel">5 skills</span>
                </span>
                <span aria-hidden="true" class="settings-drilldown-chevron">
                  <svg data-icon="ChevronRight" class="app-icon" focusable="false" aria-hidden="true" color="currentColor" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" height="var(--icon-size-sm)" width="var(--icon-size-sm)">
                    <path stroke-linejoin="round" stroke-linecap="round" stroke="currentColor" d="M9 6L15 12L9 18" />
                  </svg>
                </span>
              </button>
            </div>
          </div>
        </div>
        <div class="inset-group">
          <div class="inset-group-header">Memory</div>
          <div role="list" class="inset-card" aria-label="Memory">
            <div role="listitem" class="inset-row">
              <div class="inset-row-main is-static">
                <span class="inset-row-text is-wrap">
                  <span class="inset-row-label">Use Memory</span>
                  <span class="inset-row-sublabel">Use and update durable Memory stored as editable Nodes in Daily Notes.</span>
                </span>
              </div>
              <div class="inset-row-trailing">
                <button type="button" role="switch" aria-label="Use Memory" aria-checked="false">
                  <span aria-hidden="true" class="switch-mark">
                    <span class="switch-mark-thumb">
                    </span>
                  </span>
                </button>
              </div>
            </div>
            <div role="listitem" class="inset-row">
              <div class="inset-row-main is-static">
                <span class="inset-row-text is-wrap">
                  <span class="inset-row-label">Timeline Memory</span>
                  <span class="inset-row-sublabel">Ready. New durable Memory is extracted after eligible Threads become idle.</span>
                </span>
              </div>
              <div class="inset-row-trailing">
                <button type="button" class="button button-secondary button-md">Open Memory</button>
              </div>
            </div>
            <div role="listitem" class="inset-row">
              <div class="inset-row-main is-static">
                <span class="inset-row-text is-wrap">
                  <span class="inset-row-label">Reset Memory</span>
                  <span class="inset-row-sublabel">Permanently delete canonical Memory containers and every descendant inside them. Notes outside those containers and stray tagged Nodes are preserved.</span>
                </span>
              </div>
              <div class="inset-row-trailing">
                <button type="button" class="button button-danger button-md">Reset Memory</button>
              </div>
            </div>
          </div>
        </div>
        <section aria-label="Security" class="agent-settings-section settings-security-section">
          <div data-settings-anchor="agent-access" class="inset-group">
            <div class="inset-group-header">Agent access</div>
            <div role="list" class="inset-card" aria-label="Agent access">
              <div role="listitem" class="inset-row">
                <div class="inset-row-main is-static">
                  <span class="inset-row-text is-wrap">
                    <span class="inset-row-label">Filesystem</span>
                    <span class="inset-row-sublabel">Processes and file tools can read and modify everything available to your macOS account.</span>
                  </span>
                </div>
                <div class="inset-row-trailing">
                  <span class="inset-row-value">Full Access</span>
                </div>
              </div>
            </div>
            <p class="inset-group-footnote">The agent reaches whatever your macOS account reaches, including Tenon’s own data and stored provider credentials. Native TCC, administrator authorization, Keychain controls, and service sign-in still apply.</p>
          </div>
          <div data-settings-anchor="blocks" class="inset-group">
            <div class="inset-group-header">Your blocks</div>
            <div role="list" class="inset-card" aria-label="Your blocks">
              <div role="listitem" class="inset-row">
                <div class="inset-row-main is-static">
                  <span class="inset-row-text is-wrap">
                    <span class="inset-row-label">Block rule</span>
                    <span class="inset-row-sublabel">
                      <span class="inset-row-code">rm -rf /</span>
                    </span>
                  </span>
                </div>
                <div class="inset-row-trailing">
                  <button type="button" class="button button-ghost button-sm">Remove</button>
                </div>
              </div>
              <div role="listitem" class="inset-row">
                <div class="inset-row-main is-static">
                  <span class="inset-row-text is-wrap">
                    <span class="inset-row-label">Block rule</span>
                    <span class="inset-row-sublabel">
                      <span class="inset-row-code">curl * | sh</span>
                    </span>
                  </span>
                </div>
                <div class="inset-row-trailing">
                  <button type="button" class="button button-ghost button-sm">Remove</button>
                </div>
              </div>
            </div>
          </div>
        </section>
      </section>
    </div>
  </div>
</main>"
`;

exports[`settings page DOM renders the preview category byte-stably 1`] = `
"<main aria-labelledby="settings-page-title" class="settings-window">
  <div class="settings-drag-region">
    <div class="settings-toolbar">
      <div class="settings-history-nav">
        <button type="button" title="Back" class="icon-button icon-button-chrome rail-toggle" aria-label="Back" disabled>
          <svg data-icon="ChevronLeft" class="app-icon" focusable="false" aria-hidden="true" color="currentColor" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" height="var(--icon-size-md)" width="var(--icon-size-md)">
            <path stroke-linejoin="round" stroke-linecap="round" stroke="currentColor" d="M15 6L9 12L15 18" />
          </svg>
        </button>
        <span aria-hidden="true" class="settings-history-divider">
        </span>
        <button type="button" title="Forward" class="icon-button icon-button-chrome rail-toggle" aria-label="Forward" disabled>
          <svg data-icon="ChevronRight" class="app-icon" focusable="false" aria-hidden="true" color="currentColor" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" height="var(--icon-size-md)" width="var(--icon-size-md)">
            <path stroke-linejoin="round" stroke-linecap="round" stroke="currentColor" d="M9 6L15 12L9 18" />
          </svg>
        </button>
      </div>
      <h1 id="settings-page-title" class="settings-toolbar-title">Preview</h1>
    </div>
  </div>
  <div class="settings-layout">
    <aside class="settings-rail">
      <h2 class="settings-rail-title">Settings</h2>
      <nav aria-label="Settings categories" class="settings-nav">
        <button type="button" class="settings-nav-item">
          <span aria-hidden="true" class="settings-nav-icon">
            <svg data-icon="Settings" class="app-icon" focusable="false" aria-hidden="true" color="currentColor" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" height="var(--icon-size-sm)" width="var(--icon-size-sm)">
              <path stroke-linejoin="round" stroke-linecap="round" stroke="currentColor" d="M12 15C13.6569 15 15 13.6569 15 12C15 10.3431 13.6569 9 12 9C10.3431 9 9 10.3431 9 12C9 13.6569 10.3431 15 12 15Z" />
              <path stroke-linejoin="round" stroke-linecap="round" stroke="currentColor" d="M19.6224 10.3954L18.5247 7.7448L20 6L18 4L16.2647 5.48295L13.5578 4.36974L12.9353 2H10.981L10.3491 4.40113L7.70441 5.51596L6 4L4 6L5.45337 7.78885L4.3725 10.4463L2 11V13L4.40111 13.6555L5.51575 16.2997L4 18L6 20L7.79116 18.5403L10.397 19.6123L11 22H13L13.6045 19.6132L16.2551 18.5155C16.6969 18.8313 18 20 18 20L20 18L18.5159 16.2494L19.6139 13.598L21.9999 12.9772L22 11L19.6224 10.3954Z" />
            </svg>
          </span>
          <span class="settings-nav-copy">
            <span class="settings-nav-label">General</span>
          </span>
          <span class="settings-status-dot is-hidden" aria-hidden="true">
          </span>
        </button>
        <button type="button" class="settings-nav-item">
          <span aria-hidden="true" class="settings-nav-icon">
            <svg data-icon="Skill" class="app-icon" focusable="false" aria-hidden="true" color="currentColor" xmlns="http://www.w3.org/2000/svg" fill="none" stroke-width="1.5" viewBox="0 0 24 24" height="var(--icon-size-sm)" width="var(--icon-size-sm)">
              <path stroke-linejoin="round" stroke-linecap="round" stroke="currentColor" d="M2.57331 8.46334L11.2317 4.13416C11.4006 4.04971 11.5994 4.04971 11.7683 4.13416L20.4267 8.46334C20.8689 8.68446 20.8689 9.31554 20.4267 9.53666L11.7683 13.8658C11.5994 13.9503 11.4006 13.9503 11.2317 13.8658L2.57331 9.53666C2.13108 9.31554 2.13108 8.68446 2.57331 8.46334Z" />
              <path stroke-linejoin="round" stroke-linecap="round" stroke="currentColor" d="M22.5 13L22.5 9.5L20.5 8.5" />
              <path stroke-linejoin="round" stroke-linecap="round" stroke="currentColor" d="M4.5 10.5V15.9121C4.5 16.6843 4.94459 17.3876 5.6422 17.7188L10.6422 20.0928C11.185 20.3505 11.815 20.3505 12.3578 20.0928L17.3578 17.7188C18.0554 17.3876 18.5 16.6843 18.5 15.9121V10.5" />
            </svg>
          </span>
          <span class="settings-nav-copy">
            <span class="settings-nav-label">Agent</span>
          </span>
        </button>
        <button type="button" class="settings-nav-item is-active" aria-current="page">
          <span aria-hidden="true" class="settings-nav-icon">
            <svg data-icon="Database" class="app-icon" focusable="false" aria-hidden="true" color="currentColor" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" height="var(--icon-size-sm)" width="var(--icon-size-sm)">
              <path stroke="currentColor" d="M5 12V18C5 18 5 21 12 21C19 21 19 18 19 18V12" />
              <path stroke="currentColor" d="M5 6V12C5 12 5 15 12 15C19 15 19 12 19 12V6" />
              <path stroke="currentColor" d="M12 3C19 3 19 6 19 6C19 6 19 9 12 9C5 9 5 6 5 6C5 6 5 3 12 3Z" />
            </svg>
          </span>
          <span class="settings-nav-copy">
            <span class="settings-nav-label">Preview</span>
          </span>
        </button>
      </nav>
    </aside>
    <div class="settings-content">
      <section aria-label="Preview" class="agent-settings-section">
        <div data-settings-anchor="translation" class="inset-group">
          <div class="inset-group-header">Translation</div>
          <div role="list" class="inset-card" aria-label="Translation preferences">
            <div role="listitem" class="inset-row">
              <div class="inset-row-main is-static">
                <span class="inset-row-text is-wrap">
                  <span class="inset-row-label">Translate to</span>
                  <span class="inset-row-sublabel">The language webpages, captions, and books are translated into.</span>
                </span>
              </div>
              <div class="inset-row-trailing">
                <span class="select-popup">
                  <select class="select-popup-input" aria-label="Translate to">
                    <option selected value="en">English</option>
                    <option value="zh-Hans">简体中文</option>
                    <option value="zh-Hant">繁體中文</option>
                    <option value="es">Español</option>
                    <option value="ja">日本語</option>
                    <option value="ko">한국어</option>
                    <option value="fr">Français</option>
                    <option value="de">Deutsch</option>
                    <option value="pt">Português</option>
                    <option value="it">Italiano</option>
                    <option value="ru">Русский</option>
                    <option value="ar">العربية</option>
                    <option value="hi">हिन्दी</option>
                    <option value="bn">বাংলা</option>
                    <option value="ur">اردو</option>
                    <option value="id">Bahasa Indonesia</option>
                    <option value="ms">Bahasa Melayu</option>
                    <option value="vi">Tiếng Việt</option>
                    <option value="th">ไทย</option>
                    <option value="tr">Türkçe</option>
                    <option value="pl">Polski</option>
                    <option value="nl">Nederlands</option>
                    <option value="uk">Українська</option>
                    <option value="fa">فارسی</option>
                    <option value="he">עברית</option>
                    <option value="sv">Svenska</option>
                    <option value="nb">Norsk bokmål</option>
                    <option value="da">Dansk</option>
                    <option value="fi">Suomi</option>
                    <option value="el">Ελληνικά</option>
                    <option value="cs">Čeština</option>
                    <option value="ro">Română</option>
                    <option value="hu">Magyar</option>
                    <option value="sk">Slovenčina</option>
                    <option value="bg">Български</option>
                    <option value="hr">Hrvatski</option>
                    <option value="sr">Српски</option>
                    <option value="sl">Slovenščina</option>
                    <option value="lt">Lietuvių</option>
                    <option value="lv">Latviešu</option>
                    <option value="et">Eesti</option>
                    <option value="ca">Català</option>
                    <option value="fil">Filipino</option>
                    <option value="sw">Kiswahili</option>
                    <option value="ta">தமிழ்</option>
                    <option value="te">తెలుగు</option>
                    <option value="mr">मराठी</option>
                    <option value="gu">ગુજરાતી</option>
                    <option value="kn">ಕನ್ನಡ</option>
                    <option value="ml">മലയാളം</option>
                    <option value="pa">ਪੰਜਾਬੀ</option>
                    <option value="ne">नेपाली</option>
                    <option value="si">සිංහල</option>
                    <option value="my">မြန်မာ</option>
                  </select>
                  <svg data-icon="ChevronDown" class="app-icon select-popup-chevron" focusable="false" aria-hidden="true" color="currentColor" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" height="var(--icon-size-xs)" width="var(--icon-size-xs)">
                    <path stroke-linejoin="round" stroke-linecap="round" stroke="currentColor" d="M6 9L12 15L18 9" />
                  </svg>
                </span>
              </div>
            </div>
            <div role="listitem" class="inset-row">
              <div class="inset-row-main is-static">
                <span class="inset-row-text is-wrap">
                  <span class="inset-row-label">Translate webpages automatically</span>
                  <span class="inset-row-sublabel">Translate every webpage preview as it opens, without asking.</span>
                </span>
              </div>
              <div class="inset-row-trailing">
                <button type="button" role="switch" aria-label="Translate webpages automatically" aria-checked="false">
                  <span aria-hidden="true" class="switch-mark">
                    <span class="switch-mark-thumb">
                    </span>
                  </span>
                </button>
              </div>
            </div>
            <div role="listitem" class="inset-row">
              <div class="inset-row-main is-static">
                <span class="inset-row-text is-wrap">
                  <span class="inset-row-label">Translate books automatically</span>
                  <span class="inset-row-sublabel">Translate EPUB books as you read them. Separate from webpages, because a book is sent to a provider a chapter at a time.</span>
                </span>
              </div>
              <div class="inset-row-trailing">
                <button type="button" role="switch" aria-label="Translate books automatically" aria-checked="false">
                  <span aria-hidden="true" class="switch-mark">
                    <span class="switch-mark-thumb">
                    </span>
                  </span>
                </button>
              </div>
            </div>
            <div role="listitem" class="inset-row">
              <div class="inset-row-main is-static">
                <span class="inset-row-text is-wrap">
                  <span class="inset-row-label">Translation model</span>
                  <span class="inset-row-sublabel">Which model translates. Follows the Agent’s model unless you pick one.</span>
                </span>
              </div>
              <div class="inset-row-trailing">
                <span class="select-popup">
                  <select class="select-popup-input" aria-label="Translation model">
                    <option selected value="">Agent model</option>
                  </select>
                  <svg data-icon="ChevronDown" class="app-icon select-popup-chevron" focusable="false" aria-hidden="true" color="currentColor" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" height="var(--icon-size-xs)" width="var(--icon-size-xs)">
                    <path stroke-linejoin="round" stroke-linecap="round" stroke="currentColor" d="M6 9L12 15L18 9" />
                  </svg>
                </span>
              </div>
            </div>
            <div role="listitem" class="inset-row">
              <div class="inset-row-main is-static">
                <span class="inset-row-text is-wrap">
                  <span class="inset-row-label">Saved translations</span>
                  <span class="inset-row-sublabel">Translations saved locally for webpages, captions, and EPUB books.</span>
                </span>
              </div>
              <div class="inset-row-trailing">
                <button type="button" class="button button-secondary button-md">Clear…</button>
              </div>
            </div>
          </div>
        </div>
        <div data-settings-anchor="websites" class="inset-group">
          <div class="inset-group-header">Websites</div>
          <div role="list" class="inset-card" aria-label="Website data">
            <div role="listitem" class="inset-row">
              <div class="inset-row-main is-static">
                <span class="inset-row-text is-wrap">
                  <span class="inset-row-label">Website data</span>
                  <span class="inset-row-sublabel">Cookies, cache, and site storage used by URL Preview.</span>
                </span>
              </div>
              <div class="inset-row-trailing">
                <button type="button" class="button button-secondary button-md">Clear…</button>
              </div>
            </div>
          </div>
        </div>
      </section>
    </div>
  </div>
</main>"
`;

exports[`settings page DOM renders the services page byte-stably 1`] = `
"<main aria-labelledby="settings-page-title" class="settings-window">
  <div class="settings-drag-region">
    <div class="settings-toolbar">
      <div class="settings-history-nav">
        <button type="button" title="Back" class="icon-button icon-button-chrome rail-toggle" aria-label="Back" disabled>
          <svg data-icon="ChevronLeft" class="app-icon" focusable="false" aria-hidden="true" color="currentColor" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" height="var(--icon-size-md)" width="var(--icon-size-md)">
            <path stroke-linejoin="round" stroke-linecap="round" stroke="currentColor" d="M15 6L9 12L15 18" />
          </svg>
        </button>
        <span aria-hidden="true" class="settings-history-divider">
        </span>
        <button type="button" title="Forward" class="icon-button icon-button-chrome rail-toggle" aria-label="Forward" disabled>
          <svg data-icon="ChevronRight" class="app-icon" focusable="false" aria-hidden="true" color="currentColor" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" height="var(--icon-size-md)" width="var(--icon-size-md)">
            <path stroke-linejoin="round" stroke-linecap="round" stroke="currentColor" d="M9 6L15 12L9 18" />
          </svg>
        </button>
      </div>
      <h1 id="settings-page-title" class="settings-toolbar-title">Model services</h1>
    </div>
  </div>
  <div class="settings-layout">
    <aside class="settings-rail">
      <h2 class="settings-rail-title">Settings</h2>
      <nav aria-label="Settings categories" class="settings-nav">
        <button type="button" class="settings-nav-item">
          <span aria-hidden="true" class="settings-nav-icon">
            <svg data-icon="Settings" class="app-icon" focusable="false" aria-hidden="true" color="currentColor" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" height="var(--icon-size-sm)" width="var(--icon-size-sm)">
              <path stroke-linejoin="round" stroke-linecap="round" stroke="currentColor" d="M12 15C13.6569 15 15 13.6569 15 12C15 10.3431 13.6569 9 12 9C10.3431 9 9 10.3431 9 12C9 13.6569 10.3431 15 12 15Z" />
              <path stroke-linejoin="round" stroke-linecap="round" stroke="currentColor" d="M19.6224 10.3954L18.5247 7.7448L20 6L18 4L16.2647 5.48295L13.5578 4.36974L12.9353 2H10.981L10.3491 4.40113L7.70441 5.51596L6 4L4 6L5.45337 7.78885L4.3725 10.4463L2 11V13L4.40111 13.6555L5.51575 16.2997L4 18L6 20L7.79116 18.5403L10.397 19.6123L11 22H13L13.6045 19.6132L16.2551 18.5155C16.6969 18.8313 18 20 18 20L20 18L18.5159 16.2494L19.6139 13.598L21.9999 12.9772L22 11L19.6224 10.3954Z" />
            </svg>
          </span>
          <span class="settings-nav-copy">
            <span class="settings-nav-label">General</span>
          </span>
          <span class="settings-status-dot is-hidden" aria-hidden="true">
          </span>
        </button>
        <button type="button" class="settings-nav-item is-active" aria-current="page">
          <span aria-hidden="true" class="settings-nav-icon">
            <svg data-icon="Skill" class="app-icon" focusable="false" aria-hidden="true" color="currentColor" xmlns="http://www.w3.org/2000/svg" fill="none" stroke-width="1.5" viewBox="0 0 24 24" height="var(--icon-size-sm)" width="var(--icon-size-sm)">
              <path stroke-linejoin="round" stroke-linecap="round" stroke="currentColor" d="M2.57331 8.46334L11.2317 4.13416C11.4006 4.04971 11.5994 4.04971 11.7683 4.13416L20.4267 8.46334C20.8689 8.68446 20.8689 9.31554 20.4267 9.53666L11.7683 13.8658C11.5994 13.9503 11.4006 13.9503 11.2317 13.8658L2.57331 9.53666C2.13108 9.31554 2.13108 8.68446 2.57331 8.46334Z" />
              <path stroke-linejoin="round" stroke-linecap="round" stroke="currentColor" d="M22.5 13L22.5 9.5L20.5 8.5" />
              <path stroke-linejoin="round" stroke-linecap="round" stroke="currentColor" d="M4.5 10.5V15.9121C4.5 16.6843 4.94459 17.3876 5.6422 17.7188L10.6422 20.0928C11.185 20.3505 11.815 20.3505 12.3578 20.0928L17.3578 17.7188C18.0554 17.3876 18.5 16.6843 18.5 15.9121V10.5" />
            </svg>
          </span>
          <span class="settings-nav-copy">
            <span class="settings-nav-label">Agent</span>
          </span>
        </button>
        <button type="button" class="settings-nav-item">
          <span aria-hidden="true" class="settings-nav-icon">
            <svg data-icon="Database" class="app-icon" focusable="false" aria-hidden="true" color="currentColor" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" height="var(--icon-size-sm)" width="var(--icon-size-sm)">
              <path stroke="currentColor" d="M5 12V18C5 18 5 21 12 21C19 21 19 18 19 18V12" />
              <path stroke="currentColor" d="M5 6V12C5 12 5 15 12 15C19 15 19 12 19 12V6" />
              <path stroke="currentColor" d="M12 3C19 3 19 6 19 6C19 6 19 9 12 9C5 9 5 6 5 6C5 6 5 3 12 3Z" />
            </svg>
          </span>
          <span class="settings-nav-copy">
            <span class="settings-nav-label">Preview</span>
          </span>
        </button>
      </nav>
    </aside>
    <div class="settings-content">
      <section aria-label="Model services" class="agent-settings-section settings-providers-section">
        <div class="settings-provider-groups">
          <div class="inset-group">
            <div class="inset-group-header">Image generation</div>
            <div role="list" class="inset-card" aria-label="Image generation settings">
              <div role="listitem" class="inset-row">
                <div class="inset-row-main is-static">
                  <span class="inset-row-text is-wrap">
                    <span class="inset-row-label">Default model</span>
                    <span class="inset-row-sublabel">Used when generate_image does not name a model.</span>
                  </span>
                </div>
                <div class="inset-row-trailing">
                  <span class="select-popup">
                    <select class="select-popup-input" aria-label="Default model">
                      <option selected value="">Auto</option>
                    </select>
                    <svg data-icon="ChevronDown" class="app-icon select-popup-chevron" focusable="false" aria-hidden="true" color="currentColor" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" height="var(--icon-size-xs)" width="var(--icon-size-xs)">
                      <path stroke-linejoin="round" stroke-linecap="round" stroke="currentColor" d="M6 9L12 15L18 9" />
                    </svg>
                  </span>
                </div>
              </div>
            </div>
          </div>
          <div class="inset-group">
            <div class="inset-group-header">Configured</div>
            <div role="list" class="inset-card" aria-label="Configured providers">
              <div role="listitem" class="inset-row">
                <button type="button" class="inset-row-main" aria-label="Anthropic, Needs key">
                  <span class="inset-row-leading">
                    <span aria-hidden="true" class="settings-provider-avatar has-logo">
                      <span class="settings-provider-logo">
                        <svg data-fixture-logo="anthropic" />
                      </span>
                    </span>
                  </span>
                  <span class="inset-row-text">
                    <span class="inset-row-label">Anthropic</span>
                    <span class="inset-row-sublabel">Needs key</span>
                  </span>
                </button>
                <div class="inset-row-trailing">
                  <div class="settings-provider-row-actions">
                    <button type="button" role="switch" aria-label="Enable or disable Anthropic" aria-checked="true">
                      <span aria-hidden="true" class="switch-mark checked">
                        <span class="switch-mark-thumb">
                        </span>
                      </span>
                    </button>
                    <button type="button" class="settings-row-menu-trigger" aria-label="Anthropic actions" aria-haspopup="menu" aria-expanded="false">
                      <svg data-icon="More" class="app-icon" focusable="false" aria-hidden="true" color="currentColor" xmlns="http://www.w3.org/2000/svg" fill="none" stroke-width="1.5" viewBox="0 0 24 24" height="var(--icon-size-sm)" width="var(--icon-size-sm)">
                        <path stroke-linejoin="round" stroke-linecap="round" stroke="currentColor" fill="currentColor" d="M20 12.5C20.2761 12.5 20.5 12.2761 20.5 12C20.5 11.7239 20.2761 11.5 20 11.5C19.7239 11.5 19.5 11.7239 19.5 12C19.5 12.2761 19.7239 12.5 20 12.5Z" />
                        <path stroke-linejoin="round" stroke-linecap="round" stroke="currentColor" fill="currentColor" d="M12 12.5C12.2761 12.5 12.5 12.2761 12.5 12C12.5 11.7239 12.2761 11.5 12 11.5C11.7239 11.5 11.5 11.7239 11.5 12C11.5 12.2761 11.7239 12.5 12 12.5Z" />
                        <path stroke-linejoin="round" stroke-linecap="round" stroke="currentColor" fill="currentColor" d="M4 12.5C4.27614 12.5 4.5 12.2761 4.5 12C4.5 11.7239 4.27614 11.5 4 11.5C3.72386 11.5 3.5 11.7239 3.5 12C3.5 12.2761 3.72386 12.5 4 12.5Z" />
                      </svg>
                    </button>
                  </div>
                </div>
              </div>
              <div role="listitem" class="inset-row is-disabled">
                <button type="button" class="inset-row-main" aria-label="OpenAI, Disabled">
                  <span class="inset-row-leading">
                    <span aria-hidden="true" class="settings-provider-avatar has-logo">
                      <span class="settings-provider-logo">
                        <svg data-fixture-logo="openai" />
                      </span>
                    </span>
                  </span>
                  <span class="inset-row-text">
                    <span class="inset-row-label">OpenAI</span>
                    <span class="inset-row-sublabel">Disabled</span>
                  </span>
                </button>
                <div class="inset-row-trailing">
                  <div class="settings-provider-row-actions">
                    <button type="button" role="switch" aria-label="Enable or disable OpenAI" aria-checked="false">
                      <span aria-hidden="true" class="switch-mark">
                        <span class="switch-mark-thumb">
                        </span>
                      </span>
                    </button>
                    <button type="button" class="settings-row-menu-trigger" aria-label="OpenAI actions" aria-haspopup="menu" aria-expanded="false">
                      <svg data-icon="More" class="app-icon" focusable="false" aria-hidden="true" color="currentColor" xmlns="http://www.w3.org/2000/svg" fill="none" stroke-width="1.5" viewBox="0 0 24 24" height="var(--icon-size-sm)" width="var(--icon-size-sm)">
                        <path stroke-linejoin="round" stroke-linecap="round" stroke="currentColor" fill="currentColor" d="M20 12.5C20.2761 12.5 20.5 12.2761 20.5 12C20.5 11.7239 20.2761 11.5 20 11.5C19.7239 11.5 19.5 11.7239 19.5 12C19.5 12.2761 19.7239 12.5 20 12.5Z" />
                        <path stroke-linejoin="round" stroke-linecap="round" stroke="currentColor" fill="currentColor" d="M12 12.5C12.2761 12.5 12.5 12.2761 12.5 12C12.5 11.7239 12.2761 11.5 12 11.5C11.7239 11.5 11.5 11.7239 11.5 12C11.5 12.2761 11.7239 12.5 12 12.5Z" />
                        <path stroke-linejoin="round" stroke-linecap="round" stroke="currentColor" fill="currentColor" d="M4 12.5C4.27614 12.5 4.5 12.2761 4.5 12C4.5 11.7239 4.27614 11.5 4 11.5C3.72386 11.5 3.5 11.7239 3.5 12C3.5 12.2761 3.72386 12.5 4 12.5Z" />
                      </svg>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div class="inset-group">
            <div class="inset-group-header">Add providers</div>
            <div role="list" class="inset-card" aria-label="Providers to add">
              <div role="listitem" class="inset-row">
                <button type="button" class="inset-row-main" aria-label="Add custom provider">
                  <span class="inset-row-leading">
                    <span aria-hidden="true" class="settings-provider-add-leading">
                      <svg data-icon="Add" class="app-icon" focusable="false" aria-hidden="true" color="currentColor" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" height="var(--icon-size-sm)" width="var(--icon-size-sm)">
                        <path stroke-linejoin="round" stroke-linecap="round" stroke="currentColor" d="M6 12H12M18 12H12M12 12V6M12 12V18" />
                      </svg>
                    </span>
                  </span>
                  <span class="inset-row-text">
                    <span class="inset-row-label">Add custom provider</span>
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </section>
    </div>
  </div>
</main>"
`;

exports[`settings page DOM renders the skills page byte-stably 1`] = `
"<main aria-labelledby="settings-page-title" class="settings-window">
  <div class="settings-drag-region">
    <div class="settings-toolbar">
      <div class="settings-history-nav">
        <button type="button" title="Back" class="icon-button icon-button-chrome rail-toggle" aria-label="Back" disabled>
          <svg data-icon="ChevronLeft" class="app-icon" focusable="false" aria-hidden="true" color="currentColor" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" height="var(--icon-size-md)" width="var(--icon-size-md)">
            <path stroke-linejoin="round" stroke-linecap="round" stroke="currentColor" d="M15 6L9 12L15 18" />
          </svg>
        </button>
        <span aria-hidden="true" class="settings-history-divider">
        </span>
        <button type="button" title="Forward" class="icon-button icon-button-chrome rail-toggle" aria-label="Forward" disabled>
          <svg data-icon="ChevronRight" class="app-icon" focusable="false" aria-hidden="true" color="currentColor" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" height="var(--icon-size-md)" width="var(--icon-size-md)">
            <path stroke-linejoin="round" stroke-linecap="round" stroke="currentColor" d="M9 6L15 12L9 18" />
          </svg>
        </button>
      </div>
      <h1 id="settings-page-title" class="settings-toolbar-title">Skills</h1>
    </div>
  </div>
  <div class="settings-layout">
    <aside class="settings-rail">
      <h2 class="settings-rail-title">Settings</h2>
      <nav aria-label="Settings categories" class="settings-nav">
        <button type="button" class="settings-nav-item">
          <span aria-hidden="true" class="settings-nav-icon">
            <svg data-icon="Settings" class="app-icon" focusable="false" aria-hidden="true" color="currentColor" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" height="var(--icon-size-sm)" width="var(--icon-size-sm)">
              <path stroke-linejoin="round" stroke-linecap="round" stroke="currentColor" d="M12 15C13.6569 15 15 13.6569 15 12C15 10.3431 13.6569 9 12 9C10.3431 9 9 10.3431 9 12C9 13.6569 10.3431 15 12 15Z" />
              <path stroke-linejoin="round" stroke-linecap="round" stroke="currentColor" d="M19.6224 10.3954L18.5247 7.7448L20 6L18 4L16.2647 5.48295L13.5578 4.36974L12.9353 2H10.981L10.3491 4.40113L7.70441 5.51596L6 4L4 6L5.45337 7.78885L4.3725 10.4463L2 11V13L4.40111 13.6555L5.51575 16.2997L4 18L6 20L7.79116 18.5403L10.397 19.6123L11 22H13L13.6045 19.6132L16.2551 18.5155C16.6969 18.8313 18 20 18 20L20 18L18.5159 16.2494L19.6139 13.598L21.9999 12.9772L22 11L19.6224 10.3954Z" />
            </svg>
          </span>
          <span class="settings-nav-copy">
            <span class="settings-nav-label">General</span>
          </span>
          <span class="settings-status-dot is-hidden" aria-hidden="true">
          </span>
        </button>
        <button type="button" class="settings-nav-item is-active" aria-current="page">
          <span aria-hidden="true" class="settings-nav-icon">
            <svg data-icon="Skill" class="app-icon" focusable="false" aria-hidden="true" color="currentColor" xmlns="http://www.w3.org/2000/svg" fill="none" stroke-width="1.5" viewBox="0 0 24 24" height="var(--icon-size-sm)" width="var(--icon-size-sm)">
              <path stroke-linejoin="round" stroke-linecap="round" stroke="currentColor" d="M2.57331 8.46334L11.2317 4.13416C11.4006 4.04971 11.5994 4.04971 11.7683 4.13416L20.4267 8.46334C20.8689 8.68446 20.8689 9.31554 20.4267 9.53666L11.7683 13.8658C11.5994 13.9503 11.4006 13.9503 11.2317 13.8658L2.57331 9.53666C2.13108 9.31554 2.13108 8.68446 2.57331 8.46334Z" />
              <path stroke-linejoin="round" stroke-linecap="round" stroke="currentColor" d="M22.5 13L22.5 9.5L20.5 8.5" />
              <path stroke-linejoin="round" stroke-linecap="round" stroke="currentColor" d="M4.5 10.5V15.9121C4.5 16.6843 4.94459 17.3876 5.6422 17.7188L10.6422 20.0928C11.185 20.3505 11.815 20.3505 12.3578 20.0928L17.3578 17.7188C18.0554 17.3876 18.5 16.6843 18.5 15.9121V10.5" />
            </svg>
          </span>
          <span class="settings-nav-copy">
            <span class="settings-nav-label">Agent</span>
          </span>
        </button>
        <button type="button" class="settings-nav-item">
          <span aria-hidden="true" class="settings-nav-icon">
            <svg data-icon="Database" class="app-icon" focusable="false" aria-hidden="true" color="currentColor" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" height="var(--icon-size-sm)" width="var(--icon-size-sm)">
              <path stroke="currentColor" d="M5 12V18C5 18 5 21 12 21C19 21 19 18 19 18V12" />
              <path stroke="currentColor" d="M5 6V12C5 12 5 15 12 15C19 15 19 12 19 12V6" />
              <path stroke="currentColor" d="M12 3C19 3 19 6 19 6C19 6 19 9 12 9C5 9 5 6 5 6C5 6 5 3 12 3Z" />
            </svg>
          </span>
          <span class="settings-nav-copy">
            <span class="settings-nav-label">Preview</span>
          </span>
        </button>
      </nav>
    </aside>
    <div class="settings-content">
      <section aria-label="Skills" class="agent-settings-section settings-skills-section">
        <div class="inset-group">
          <div class="inset-group-header has-action">
            <span class="inset-group-header-label">Skills</span>
            <span class="inset-group-header-action">
              <button type="button" title="Check managed skills for updates" class="icon-button icon-button-chrome rail-toggle" aria-label="Check managed skills for updates">
                <svg data-icon="Refresh" class="app-icon" focusable="false" aria-hidden="true" color="currentColor" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" height="var(--icon-size-sm)" width="var(--icon-size-sm)">
                  <path stroke-linejoin="round" stroke-linecap="round" stroke="currentColor" d="M21.8883 13.5C21.1645 18.3113 17.013 22 12 22C6.47715 22 2 17.5228 2 12C2 6.47715 6.47715 2 12 2C16.1006 2 19.6248 4.46819 21.1679 8" />
                  <path stroke-linejoin="round" stroke-linecap="round" stroke="currentColor" d="M17 8H21.4C21.7314 8 22 7.73137 22 7.4V3" />
                </svg>
              </button>
              <button type="button" title="Add a skill" class="icon-button icon-button-chrome rail-toggle" aria-label="Add a skill" aria-haspopup="menu" aria-expanded="false">
                <svg data-icon="Add" class="app-icon" focusable="false" aria-hidden="true" color="currentColor" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" height="var(--icon-size-sm)" width="var(--icon-size-sm)">
                  <path stroke-linejoin="round" stroke-linecap="round" stroke="currentColor" d="M6 12H12M18 12H12M12 12V6M12 12V18" />
                </svg>
              </button>
            </span>
          </div>
          <div role="list" class="inset-card" aria-label="Installed skills">
            <div role="listitem" class="inset-row">
              <div class="inset-row-main is-static">
                <span class="inset-row-text is-wrap">
                  <span class="inset-row-label">/pdf<span class="settings-chip">managed</span>
                  <span class="settings-chip">Recommended</span>
                </span>
                <span class="inset-row-sublabel">
                  <span class="settings-skill-description">Create, inspect, extract, repair, render, OCR, redact, and verify PDF artifacts.</span>
                </span>
              </span>
            </div>
            <div class="inset-row-trailing">
              <button type="button" class="settings-row-menu-trigger" aria-label="pdf actions" aria-haspopup="menu" aria-expanded="false">
                <svg data-icon="More" class="app-icon" focusable="false" aria-hidden="true" color="currentColor" xmlns="http://www.w3.org/2000/svg" fill="none" stroke-width="1.5" viewBox="0 0 24 24" height="var(--icon-size-sm)" width="var(--icon-size-sm)">
                  <path stroke-linejoin="round" stroke-linecap="round" stroke="currentColor" fill="currentColor" d="M20 12.5C20.2761 12.5 20.5 12.2761 20.5 12C20.5 11.7239 20.2761 11.5 20 11.5C19.7239 11.5 19.5 11.7239 19.5 12C19.5 12.2761 19.7239 12.5 20 12.5Z" />
                  <path stroke-linejoin="round" stroke-linecap="round" stroke="currentColor" fill="currentColor" d="M12 12.5C12.2761 12.5 12.5 12.2761 12.5 12C12.5 11.7239 12.2761 11.5 12 11.5C11.7239 11.5 11.5 11.7239 11.5 12C11.5 12.2761 11.7239 12.5 12 12.5Z" />
                  <path stroke-linejoin="round" stroke-linecap="round" stroke="currentColor" fill="currentColor" d="M4 12.5C4.27614 12.5 4.5 12.2761 4.5 12C4.5 11.7239 4.27614 11.5 4 11.5C3.72386 11.5 3.5 11.7239 3.5 12C3.5 12.2761 3.72386 12.5 4 12.5Z" />
                </svg>
              </button>
              <button type="button" role="switch" aria-label="Enable pdf" aria-checked="true">
                <span aria-hidden="true" class="switch-mark checked">
                  <span class="switch-mark-thumb">
                  </span>
                </span>
              </button>
            </div>
          </div>
          <div role="listitem" class="inset-row is-disabled">
            <div class="inset-row-main is-static">
              <span class="inset-row-text is-wrap">
                <span class="inset-row-label">/project-lint<span class="settings-chip">project</span>
              </span>
              <span class="inset-row-sublabel">
                <span class="settings-skill-description">Fixture skill project-lint.</span>
              </span>
            </span>
          </div>
          <div class="inset-row-trailing">
            <button type="button" class="settings-row-menu-trigger" aria-label="project-lint actions" aria-haspopup="menu" aria-expanded="false">
              <svg data-icon="More" class="app-icon" focusable="false" aria-hidden="true" color="currentColor" xmlns="http://www.w3.org/2000/svg" fill="none" stroke-width="1.5" viewBox="0 0 24 24" height="var(--icon-size-sm)" width="var(--icon-size-sm)">
                <path stroke-linejoin="round" stroke-linecap="round" stroke="currentColor" fill="currentColor" d="M20 12.5C20.2761 12.5 20.5 12.2761 20.5 12C20.5 11.7239 20.2761 11.5 20 11.5C19.7239 11.5 19.5 11.7239 19.5 12C19.5 12.2761 19.7239 12.5 20 12.5Z" />
                <path stroke-linejoin="round" stroke-linecap="round" stroke="currentColor" fill="currentColor" d="M12 12.5C12.2761 12.5 12.5 12.2761 12.5 12C12.5 11.7239 12.2761 11.5 12 11.5C11.7239 11.5 11.5 11.7239 11.5 12C11.5 12.2761 11.7239 12.5 12 12.5Z" />
                <path stroke-linejoin="round" stroke-linecap="round" stroke="currentColor" fill="currentColor" d="M4 12.5C4.27614 12.5 4.5 12.2761 4.5 12C4.5 11.7239 4.27614 11.5 4 11.5C3.72386 11.5 3.5 11.7239 3.5 12C3.5 12.2761 3.72386 12.5 4 12.5Z" />
              </svg>
            </button>
            <button type="button" role="switch" aria-label="Toggle project-lint" aria-checked="false">
              <span aria-hidden="true" class="switch-mark">
                <span class="switch-mark-thumb">
                </span>
              </span>
            </button>
          </div>
        </div>
        <div role="listitem" class="inset-row">
          <div class="inset-row-main is-static">
            <span class="inset-row-text is-wrap">
              <span class="inset-row-label">/project-undoable<span class="settings-chip">project</span>
            </span>
            <span class="inset-row-sublabel">
              <span class="settings-skill-description">Fixture skill project-undoable.</span>
            </span>
          </span>
        </div>
        <div class="inset-row-trailing">
          <button type="button" class="settings-row-menu-trigger" aria-label="project-undoable actions" aria-haspopup="menu" aria-expanded="false">
            <svg data-icon="More" class="app-icon" focusable="false" aria-hidden="true" color="currentColor" xmlns="http://www.w3.org/2000/svg" fill="none" stroke-width="1.5" viewBox="0 0 24 24" height="var(--icon-size-sm)" width="var(--icon-size-sm)">
              <path stroke-linejoin="round" stroke-linecap="round" stroke="currentColor" fill="currentColor" d="M20 12.5C20.2761 12.5 20.5 12.2761 20.5 12C20.5 11.7239 20.2761 11.5 20 11.5C19.7239 11.5 19.5 11.7239 19.5 12C19.5 12.2761 19.7239 12.5 20 12.5Z" />
              <path stroke-linejoin="round" stroke-linecap="round" stroke="currentColor" fill="currentColor" d="M12 12.5C12.2761 12.5 12.5 12.2761 12.5 12C12.5 11.7239 12.2761 11.5 12 11.5C11.7239 11.5 11.5 11.7239 11.5 12C11.5 12.2761 11.7239 12.5 12 12.5Z" />
              <path stroke-linejoin="round" stroke-linecap="round" stroke="currentColor" fill="currentColor" d="M4 12.5C4.27614 12.5 4.5 12.2761 4.5 12C4.5 11.7239 4.27614 11.5 4 11.5C3.72386 11.5 3.5 11.7239 3.5 12C3.5 12.2761 3.72386 12.5 4 12.5Z" />
            </svg>
          </button>
          <button type="button" role="switch" aria-label="Toggle project-undoable" aria-checked="true">
            <span aria-hidden="true" class="switch-mark checked">
              <span class="switch-mark-thumb">
              </span>
            </span>
          </button>
        </div>
      </div>
      <div role="listitem" class="inset-row">
        <div class="inset-row-main is-static">
          <span class="inset-row-text is-wrap">
            <span class="inset-row-label">/skillify<span class="settings-chip">built-in</span>
          </span>
          <span class="inset-row-sublabel">
            <span class="settings-skill-description">Fixture skill skillify.</span>
          </span>
        </span>
      </div>
      <div class="inset-row-trailing">
        <button type="button" class="settings-row-menu-trigger" aria-label="skillify actions" aria-haspopup="menu" aria-expanded="false">
          <svg data-icon="More" class="app-icon" focusable="false" aria-hidden="true" color="currentColor" xmlns="http://www.w3.org/2000/svg" fill="none" stroke-width="1.5" viewBox="0 0 24 24" height="var(--icon-size-sm)" width="var(--icon-size-sm)">
            <path stroke-linejoin="round" stroke-linecap="round" stroke="currentColor" fill="currentColor" d="M20 12.5C20.2761 12.5 20.5 12.2761 20.5 12C20.5 11.7239 20.2761 11.5 20 11.5C19.7239 11.5 19.5 11.7239 19.5 12C19.5 12.2761 19.7239 12.5 20 12.5Z" />
            <path stroke-linejoin="round" stroke-linecap="round" stroke="currentColor" fill="currentColor" d="M12 12.5C12.2761 12.5 12.5 12.2761 12.5 12C12.5 11.7239 12.2761 11.5 12 11.5C11.7239 11.5 11.5 11.7239 11.5 12C11.5 12.2761 11.7239 12.5 12 12.5Z" />
            <path stroke-linejoin="round" stroke-linecap="round" stroke="currentColor" fill="currentColor" d="M4 12.5C4.27614 12.5 4.5 12.2761 4.5 12C4.5 11.7239 4.27614 11.5 4 11.5C3.72386 11.5 3.5 11.7239 3.5 12C3.5 12.2761 3.72386 12.5 4 12.5Z" />
          </svg>
        </button>
        <button type="button" role="switch" aria-label="Toggle skillify" aria-checked="true">
          <span aria-hidden="true" class="switch-mark checked">
            <span class="switch-mark-thumb">
            </span>
          </span>
        </button>
      </div>
    </div>
    <div role="listitem" class="inset-row">
      <div class="inset-row-main is-static">
        <span class="inset-row-text is-wrap">
          <span class="inset-row-label">/user-notes<span class="settings-chip">user</span>
        </span>
        <span class="inset-row-sublabel">
          <span class="settings-skill-description">Fixture skill user-notes.</span>
        </span>
      </span>
    </div>
    <div class="inset-row-trailing">
      <button type="button" class="settings-row-menu-trigger" aria-label="user-notes actions" aria-haspopup="menu" aria-expanded="false">
        <svg data-icon="More" class="app-icon" focusable="false" aria-hidden="true" color="currentColor" xmlns="http://www.w3.org/2000/svg" fill="none" stroke-width="1.5" viewBox="0 0 24 24" height="var(--icon-size-sm)" width="var(--icon-size-sm)">
          <path stroke-linejoin="round" stroke-linecap="round" stroke="currentColor" fill="currentColor" d="M20 12.5C20.2761 12.5 20.5 12.2761 20.5 12C20.5 11.7239 20.2761 11.5 20 11.5C19.7239 11.5 19.5 11.7239 19.5 12C19.5 12.2761 19.7239 12.5 20 12.5Z" />
          <path stroke-linejoin="round" stroke-linecap="round" stroke="currentColor" fill="currentColor" d="M12 12.5C12.2761 12.5 12.5 12.2761 12.5 12C12.5 11.7239 12.2761 11.5 12 11.5C11.7239 11.5 11.5 11.7239 11.5 12C11.5 12.2761 11.7239 12.5 12 12.5Z" />
          <path stroke-linejoin="round" stroke-linecap="round" stroke="currentColor" fill="currentColor" d="M4 12.5C4.27614 12.5 4.5 12.2761 4.5 12C4.5 11.7239 4.27614 11.5 4 11.5C3.72386 11.5 3.5 11.7239 3.5 12C3.5 12.2761 3.72386 12.5 4 12.5Z" />
        </svg>
      </button>
      <button type="button" role="switch" aria-label="Toggle user-notes" aria-checked="true">
        <span aria-hidden="true" class="switch-mark checked">
          <span class="switch-mark-thumb">
          </span>
        </span>
      </button>
    </div>
  </div>
</div>
</div>
</section>
</div>
</div>
</main>"
`;

exports[`settings page DOM renders the about page byte-stably 1`] = `
"<main aria-labelledby="settings-page-title" class="settings-window">
  <div class="settings-drag-region">
    <div class="settings-toolbar">
      <div class="settings-history-nav">
        <button type="button" title="Back" class="icon-button icon-button-chrome rail-toggle" aria-label="Back" disabled>
          <svg data-icon="ChevronLeft" class="app-icon" focusable="false" aria-hidden="true" color="currentColor" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" height="var(--icon-size-md)" width="var(--icon-size-md)">
            <path stroke-linejoin="round" stroke-linecap="round" stroke="currentColor" d="M15 6L9 12L15 18" />
          </svg>
        </button>
        <span aria-hidden="true" class="settings-history-divider">
        </span>
        <button type="button" title="Forward" class="icon-button icon-button-chrome rail-toggle" aria-label="Forward" disabled>
          <svg data-icon="ChevronRight" class="app-icon" focusable="false" aria-hidden="true" color="currentColor" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" height="var(--icon-size-md)" width="var(--icon-size-md)">
            <path stroke-linejoin="round" stroke-linecap="round" stroke="currentColor" d="M9 6L15 12L9 18" />
          </svg>
        </button>
      </div>
      <h1 id="settings-page-title" class="settings-toolbar-title">About</h1>
    </div>
  </div>
  <div class="settings-layout">
    <aside class="settings-rail">
      <h2 class="settings-rail-title">Settings</h2>
      <nav aria-label="Settings categories" class="settings-nav">
        <button type="button" class="settings-nav-item is-active" aria-current="page">
          <span aria-hidden="true" class="settings-nav-icon">
            <svg data-icon="Settings" class="app-icon" focusable="false" aria-hidden="true" color="currentColor" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" height="var(--icon-size-sm)" width="var(--icon-size-sm)">
              <path stroke-linejoin="round" stroke-linecap="round" stroke="currentColor" d="M12 15C13.6569 15 15 13.6569 15 12C15 10.3431 13.6569 9 12 9C10.3431 9 9 10.3431 9 12C9 13.6569 10.3431 15 12 15Z" />
              <path stroke-linejoin="round" stroke-linecap="round" stroke="currentColor" d="M19.6224 10.3954L18.5247 7.7448L20 6L18 4L16.2647 5.48295L13.5578 4.36974L12.9353 2H10.981L10.3491 4.40113L7.70441 5.51596L6 4L4 6L5.45337 7.78885L4.3725 10.4463L2 11V13L4.40111 13.6555L5.51575 16.2997L4 18L6 20L7.79116 18.5403L10.397 19.6123L11 22H13L13.6045 19.6132L16.2551 18.5155C16.6969 18.8313 18 20 18 20L20 18L18.5159 16.2494L19.6139 13.598L21.9999 12.9772L22 11L19.6224 10.3954Z" />
            </svg>
          </span>
          <span class="settings-nav-copy">
            <span class="settings-nav-label">General</span>
          </span>
          <span class="settings-status-dot is-hidden" aria-hidden="true">
          </span>
        </button>
        <button type="button" class="settings-nav-item">
          <span aria-hidden="true" class="settings-nav-icon">
            <svg data-icon="Skill" class="app-icon" focusable="false" aria-hidden="true" color="currentColor" xmlns="http://www.w3.org/2000/svg" fill="none" stroke-width="1.5" viewBox="0 0 24 24" height="var(--icon-size-sm)" width="var(--icon-size-sm)">
              <path stroke-linejoin="round" stroke-linecap="round" stroke="currentColor" d="M2.57331 8.46334L11.2317 4.13416C11.4006 4.04971 11.5994 4.04971 11.7683 4.13416L20.4267 8.46334C20.8689 8.68446 20.8689 9.31554 20.4267 9.53666L11.7683 13.8658C11.5994 13.9503 11.4006 13.9503 11.2317 13.8658L2.57331 9.53666C2.13108 9.31554 2.13108 8.68446 2.57331 8.46334Z" />
              <path stroke-linejoin="round" stroke-linecap="round" stroke="currentColor" d="M22.5 13L22.5 9.5L20.5 8.5" />
              <path stroke-linejoin="round" stroke-linecap="round" stroke="currentColor" d="M4.5 10.5V15.9121C4.5 16.6843 4.94459 17.3876 5.6422 17.7188L10.6422 20.0928C11.185 20.3505 11.815 20.3505 12.3578 20.0928L17.3578 17.7188C18.0554 17.3876 18.5 16.6843 18.5 15.9121V10.5" />
            </svg>
          </span>
          <span class="settings-nav-copy">
            <span class="settings-nav-label">Agent</span>
          </span>
        </button>
        <button type="button" class="settings-nav-item">
          <span aria-hidden="true" class="settings-nav-icon">
            <svg data-icon="Database" class="app-icon" focusable="false" aria-hidden="true" color="currentColor" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" height="var(--icon-size-sm)" width="var(--icon-size-sm)">
              <path stroke="currentColor" d="M5 12V18C5 18 5 21 12 21C19 21 19 18 19 18V12" />
              <path stroke="currentColor" d="M5 6V12C5 12 5 15 12 15C19 15 19 12 19 12V6" />
              <path stroke="currentColor" d="M12 3C19 3 19 6 19 6C19 6 19 9 12 9C5 9 5 6 5 6C5 6 5 3 12 3Z" />
            </svg>
          </span>
          <span class="settings-nav-copy">
            <span class="settings-nav-label">Preview</span>
          </span>
        </button>
      </nav>
    </aside>
    <div class="settings-content">
      <section aria-label="About" class="agent-settings-section">
        <div data-settings-anchor="version" class="inset-group">
          <div role="list" class="inset-card" aria-label="About">
            <div role="listitem" class="inset-row">
              <div class="inset-row-main is-static">
                <span class="inset-row-text is-wrap">
                  <span class="inset-row-label">Tenon</span>
                  <span class="inset-row-sublabel">Version 0.1.0</span>
                </span>
              </div>
              <div class="inset-row-trailing">
                <button type="button" class="button button-secondary button-md">Copy version info</button>
              </div>
            </div>
          </div>
        </div>
        <div data-settings-anchor="software-update" class="inset-group">
          <div class="inset-group-header">Software Update</div>
          <div role="list" class="inset-card" aria-label="Software Update">
            <div role="listitem" class="inset-row">
              <div class="inset-row-main is-static">
                <span class="inset-row-text is-wrap">
                  <span class="inset-row-label">Updates have not been checked yet</span>
                  <span class="inset-row-sublabel">Installed version 0.1.0</span>
                </span>
              </div>
            </div>
            <div role="listitem" class="inset-row">
              <div class="inset-row-main is-static">
                <span class="inset-row-text is-wrap">
                  <span class="inset-row-label">Check for updates</span>
                  <span class="inset-row-sublabel">Not checked yet</span>
                </span>
              </div>
              <div class="inset-row-trailing">
                <button type="button" class="button button-secondary button-md">Check now</button>
              </div>
            </div>
            <div role="listitem" class="inset-row">
              <div class="inset-row-main is-static">
                <span class="inset-row-text is-wrap">
                  <span class="inset-row-label">Check automatically</span>
                  <span class="inset-row-sublabel">Quietly check for stable Tenon releases. Downloads always wait for you.</span>
                </span>
              </div>
              <div class="inset-row-trailing">
                <button type="button" role="switch" aria-label="Check automatically" aria-checked="true">
                  <span aria-hidden="true" class="switch-mark checked">
                    <span class="switch-mark-thumb">
                    </span>
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
        <div data-settings-anchor="whats-new" class="inset-group">
          <div class="inset-group-header">What’s new in 0.1.0</div>
          <div role="list" class="inset-card" aria-label="What’s new in 0.1.0">
            <div role="listitem" class="settings-about-release-note-row">
              <div class="file-preview-markdown settings-about-release-note">
                <p>A deterministic user note, which is all the pane renders.</p>
              </div>
            </div>
            <div role="listitem" class="inset-row">
              <button type="button" class="inset-row-main">
                <span class="inset-row-text">
                  <span class="inset-row-label">Full changelog</span>
                </span>
              </button>
              <div class="inset-row-trailing">
                <svg data-icon="OpenInBrowser" class="app-icon" focusable="false" aria-hidden="true" color="currentColor" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" height="var(--icon-size-tiny)" width="var(--icon-size-tiny)">
                  <path stroke-linejoin="round" stroke-linecap="round" stroke="currentColor" d="M8 21H20.4C20.7314 21 21 20.7314 21 20.4V3.6C21 3.26863 20.7314 3 20.4 3H3.6C3.26863 3 3 3.26863 3 3.6V16" />
                  <path stroke-linejoin="round" stroke-linecap="round" stroke="currentColor" d="M10 6L18 6" />
                  <path stroke-linejoin="round" stroke-linecap="round" stroke="currentColor" d="M6 6H7" />
                  <path stroke-linejoin="round" stroke-linecap="round" stroke="currentColor" d="M3.5 20.5L12 12M12 12V16M12 12H8" />
                </svg>
              </div>
            </div>
          </div>
        </div>
        <div data-settings-anchor="support" class="inset-group">
          <div class="inset-group-header">Support</div>
          <div role="list" class="inset-card" aria-label="Support">
            <div role="listitem" class="inset-row">
              <button type="button" class="inset-row-main">
                <span class="inset-row-text">
                  <span class="inset-row-label">Tenon Help</span>
                </span>
              </button>
              <div class="inset-row-trailing">
                <svg data-icon="OpenInBrowser" class="app-icon" focusable="false" aria-hidden="true" color="currentColor" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" height="var(--icon-size-tiny)" width="var(--icon-size-tiny)">
                  <path stroke-linejoin="round" stroke-linecap="round" stroke="currentColor" d="M8 21H20.4C20.7314 21 21 20.7314 21 20.4V3.6C21 3.26863 20.7314 3 20.4 3H3.6C3.26863 3 3 3.26863 3 3.6V16" />
                  <path stroke-linejoin="round" stroke-linecap="round" stroke="currentColor" d="M10 6L18 6" />
                  <path stroke-linejoin="round" stroke-linecap="round" stroke="currentColor" d="M6 6H7" />
                  <path stroke-linejoin="round" stroke-linecap="round" stroke="currentColor" d="M3.5 20.5L12 12M12 12V16M12 12H8" />
                </svg>
              </div>
            </div>
            <div role="listitem" class="inset-row">
              <button type="button" class="inset-row-main">
                <span class="inset-row-text">
                  <span class="inset-row-label">Report an issue</span>
                </span>
              </button>
              <div class="inset-row-trailing">
                <svg data-icon="OpenInBrowser" class="app-icon" focusable="false" aria-hidden="true" color="currentColor" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" height="var(--icon-size-tiny)" width="var(--icon-size-tiny)">
                  <path stroke-linejoin="round" stroke-linecap="round" stroke="currentColor" d="M8 21H20.4C20.7314 21 21 20.7314 21 20.4V3.6C21 3.26863 20.7314 3 20.4 3H3.6C3.26863 3 3 3.26863 3 3.6V16" />
                  <path stroke-linejoin="round" stroke-linecap="round" stroke="currentColor" d="M10 6L18 6" />
                  <path stroke-linejoin="round" stroke-linecap="round" stroke="currentColor" d="M6 6H7" />
                  <path stroke-linejoin="round" stroke-linecap="round" stroke="currentColor" d="M3.5 20.5L12 12M12 12V16M12 12H8" />
                </svg>
              </div>
            </div>
          </div>
        </div>
        <div data-settings-anchor="legal" class="inset-group">
          <div class="inset-group-header">Legal</div>
          <div role="list" class="inset-card" aria-label="Legal">
            <div role="listitem" class="inset-row">
              <button type="button" class="inset-row-main">
                <span class="inset-row-text">
                  <span class="inset-row-label">Tenon license</span>
                </span>
              </button>
              <div class="inset-row-trailing">
                <svg data-icon="OpenInBrowser" class="app-icon" focusable="false" aria-hidden="true" color="currentColor" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" height="var(--icon-size-tiny)" width="var(--icon-size-tiny)">
                  <path stroke-linejoin="round" stroke-linecap="round" stroke="currentColor" d="M8 21H20.4C20.7314 21 21 20.7314 21 20.4V3.6C21 3.26863 20.7314 3 20.4 3H3.6C3.26863 3 3 3.26863 3 3.6V16" />
                  <path stroke-linejoin="round" stroke-linecap="round" stroke="currentColor" d="M10 6L18 6" />
                  <path stroke-linejoin="round" stroke-linecap="round" stroke="currentColor" d="M6 6H7" />
                  <path stroke-linejoin="round" stroke-linecap="round" stroke="currentColor" d="M3.5 20.5L12 12M12 12V16M12 12H8" />
                </svg>
              </div>
            </div>
          </div>
          <p class="inset-group-footnote">Diagnostics stay on this Mac. Tenon never uploads them.</p>
        </div>
      </section>
    </div>
  </div>
</main>"
`;
